# AtomModelingCUDA

./: .gitignore  CMakeLists.txt  detect_cuda.sh  readme.md  setUp.txt  setup.sh
src/: camera.cpp  camera.h  main.cpp  particles.cu  particles.h  renderer.cpp
src/shaders/: particle.fs.glsl  particle.vs.glsl
